# hl

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
assets/: syntaxes-nl.pack  themes.pack
assets/syntaxes/: INI.sublime-syntax  Kotlin.sublime-syntax  Swift.sublime-syntax  TypeScript.sublime-syntax  TypsecriptReact.sublime-syntax
assets/themes/: Ayu-Light.tmTheme  Material.tmTheme
src/: lib.rs  main.rs
src/highlighters/: mod.rs
src/parsers/: mod.rs
src/strings/: mod.rs
src/syntaxes/: mod.rs
src/themes/: mod.rs
